--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
+  "name": "newhope",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "echo \"This template does not include a test runner by default.\" && exit 1",
-    "format": "prettier --write \"src/**/*.{ts,js}\"",
-    "lint": "prettier --check \"src/**/*.{ts,js}\""
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/diff-match-patch": "^1.0.32",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "http-proxy": "^1.18.1",
+    "snowpack": "^3.3.5",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "canvas-confetti": "^1.2.0",
     "diff-match-patch": "^1.0.5",
-    "fp-ts": "^2.10.2",
-    "fp-ts-contrib": "^0.1.21",
-    "fp-ts-rxjs": "^0.6.13",
+    "fp-ts": "^2.10.4",
+    "fp-ts-rxjs": "^0.6.14",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
-    "monocle-ts": "^2.3.9",
-    "nanohtml": "^1.9.1",
     "nanomorph": "^5.4.3",
     "rxjs": "^6.6.7"
-  },
-  "devDependencies": {
-    "@types/diff-match-patch": "^1.0.32",
-    "@snowpack/plugin-typescript": "^1.2.0",
-    "@types/canvas-confetti": "^1.0.0",
-    "@types/snowpack-env": "^2.3.2",
-    "http-proxy": "^1.18.1",
-    "prettier": "^2.0.5",
-    "snowpack": "^3.3.2",
-    "typescript": "^4.2.4"
   }
 }
