--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/diff-match-patch": "^1.0.32",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "@vercel/node": "^1.10.0",
     "eslint": "^7.26.0",
     "http-proxy": "^1.18.1",
     "snowpack": "^3.4.0",
