--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/editorUI.ts",
   "type": "module",
   "scripts": {
-    "dev": "snowpack dev",
+    "devsnowpack": "snowpack dev",
     "snowpackbuild": "snowpack build",
     "build": "rm -rf build && cp -a public build/ && esbuild src/editorUI.ts --bundle --format=esm --sourcemap --outfile=build/abtasty_sandboxed/editorUI.js"
   },
@@ -18,7 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "@vercel/node": "^1.10.0",
-    "esbuild": "^0.9.7",
+    "esbuild": "0.12.4",
     "eslint": "^7.26.0",
     "http-proxy": "^1.18.1",
     "snowpack": "^3.4.0",
@@ -28,6 +28,7 @@
     "diff-match-patch": "^1.0.5",
     "fp-ts": "^2.10.5",
     "fp-ts-rxjs": "^0.6.15",
+    "got": "^11.8.2",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "monocle-ts": "^2.3.10",
